doctor-profile.html

--- a/doctor-profile.html
+++ b/doctor-profile.html
@@ -224,7 +224,7 @@
 											<span class="d-inline-block average-rating">(35)</span>
 										</div>
 										<div class="clinic-details">
-											<p class="doc-location"><i class="fas fa-map-marker-alt"></i> Hajipur, INDAI - <a href="javascript:void(0);">Get Directions</a></p>
+											<p class="doc-location"><i class="fas fa-map-marker-alt"></i> Hajipur, BIHAR - <a href="javascript:void(0);">Get Directions</a></p>
 											<ul class="clinic-gallery">
 												<li>
 													<a href="assets/img/features/feature-01.jpg" data-fancybox="gallery">
@@ -259,7 +259,7 @@
 										<ul>
 											<li><i class="far fa-thumbs-up"></i> 99%</li>
 											<li><i class="far fa-comment"></i> 35 Feedback</li>
-											<li><i class="fas fa-map-marker-alt"></i> Hajipur, INDIA</li>
+											<li><i class="fas fa-map-marker-alt"></i> Hajipur, BIHAR</li>
 											<li><i class="far fa-money-bill-alt"></i> ₹100 per hour </li>
 										</ul>
 									</div>
@@ -335,9 +335,9 @@
 															</div>
 															<div class="experience-content">
 																<div class="timeline-content">
-																	<a href="#/" class="name">American Dental Medical University</a>
+																	<!--<a href="#/" class="name">American Dental Medical University</a>
 																	<div>BDS</div>
-																	<span class="time">1998 - 2003</span>
+																	<span class="time">1998 - 2003</span>-->
 																</div>
 															</div>
 														</li>
@@ -347,9 +347,9 @@
 															</div>
 															<div class="experience-content">
 																<div class="timeline-content">
-																	<a href="#/" class="name">American Dental Medical University</a>
+																	<!--<a href="#/" class="name">American Dental Medical University</a>
 																	<div>MDS</div>
-																	<span class="time">2003 - 2005</span>
+																	<span class="time">2003 - 2005</span>-->
 																</div>
 															</div>
 														</li>
@@ -369,8 +369,8 @@
 															</div>
 															<div class="experience-content">
 																<div class="timeline-content">
-																	<a href="#/" class="name">Glowing Smiles Family Dental Clinic</a>
-																	<span class="time">2010 - Present (5 years)</span>
+																	<!--<a href="#/" class="name">Glowing Smiles Family Dental Clinic</a>
+																	<span class="time">2010 - Present (5 years)</span>-->
 																</div>
 															</div>
 														</li>
@@ -380,8 +380,8 @@
 															</div>
 															<div class="experience-content">
 																<div class="timeline-content">
-																	<a href="#/" class="name">Comfort Care Dental Clinic</a>
-																	<span class="time">2007 - 2010 (3 years)</span>
+																	<!--<a href="#/" class="name">Comfort Care Dental Clinic</a>
+																	<span class="time">2007 - 2010 (3 years)</span>-->
 																</div>
 															</div>
 														</li>
@@ -391,8 +391,8 @@
 															</div>
 															<div class="experience-content">
 																<div class="timeline-content">
-																	<a href="#/" class="name">Dream Smile Dental Practice</a>
-																	<span class="time">2005 - 2007 (2 years)</span>
+																	<!--<a href="#/" class="name">Dream Smile Dental Practice</a>
+																	<span class="time">2005 - 2007 (2 years)</span>-->
 																</div>
 															</div>
 														</li>
@@ -412,9 +412,9 @@
 															</div>
 															<div class="experience-content">
 																<div class="timeline-content">
-																	<p class="exp-year">July 2019</p>
+																	<!--<p class="exp-year">July 2019</p>
 																	<h4 class="exp-title">Humanitarian Award</h4>
-																	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin a ipsum tellus. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+																	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin a ipsum tellus. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>-->
 																</div>
 															</div>
 														</li>
@@ -424,9 +424,9 @@
 															</div>
 															<div class="experience-content">
 																<div class="timeline-content">
-																	<p class="exp-year">March 2011</p>
+																	<!--<p class="exp-year">March 2011</p>
 																	<h4 class="exp-title">Certificate for International Volunteer Service</h4>
-																	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin a ipsum tellus. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+																	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin a ipsum tellus. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>-->
 																</div>
 															</div>
 														</li>
@@ -436,9 +436,9 @@
 															</div>
 															<div class="experience-content">
 																<div class="timeline-content">
-																	<p class="exp-year">May 2008</p>
+																	<!--<p class="exp-year">May 2008</p>
 																	<h4 class="exp-title">The Dental Professional of The Year Award</h4>
-																	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin a ipsum tellus. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+																	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin a ipsum tellus. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>-->
 																</div>
 															</div>
 														</li>
@@ -451,12 +451,12 @@
 											<div class="service-list">
 												<h4>Services</h4>
 												<ul class="clearfix">
-													<li>Tooth cleaning </li>
+													<!--<li>Tooth cleaning </li>
 													<li>Root Canal Therapy</li>
 													<li>Implants</li>
 													<li>Composite Bonding</li>
 													<li>Fissure Sealants</li>
-													<li>Surgical Extractions</li>
+													<li>Surgical Extractions</li>-->
 												</ul>
 											</div>
 											<!-- /Services List -->
@@ -465,12 +465,12 @@
 											<div class="service-list">
 												<h4>Specializations</h4>
 												<ul class="clearfix">
-													<li>Children Care</li>
+													<!--<li>Children Care</li>
 													<li>Dental Care</li>	
 													<li>Oral and Maxillofacial Surgery </li>	
 													<li>Orthodontist</li>	
 													<li>Periodontist</li>	
-													<li>Prosthodontics</li>	
+													<li>Prosthodontics</li>	-->
 												</ul>
 											</div>
 											<!-- /Specializations List -->
@@ -865,7 +865,7 @@
 												<div class="widget-content">
 													<div class="listing-hours">
 														<div class="listing-day current">
-															<div class="day">Today <span>5 Nov 2019</span></div>
+															<div class="day">Today <span>25 AUG 2020</span></div>
 															<div class="time-items">
 																<span class="open-status"><span class="badge bg-success-light">Open Now</span></span>
 																<span class="time">07:00 AM - 09:00 PM</span>
