--- a/search.html
+++ b/search.html
@@ -198,7 +198,7 @@
 									<li class="breadcrumb-item active" aria-current="page">Search</li>
 								</ol>
 							</nav>
-							<h2 class="breadcrumb-title">2245 matches found for : Dentist In Bangalore</h2>
+							<h2 class="breadcrumb-title">2245 matches found for : Dentist In BIHAR</h2>
 						</div>
 						<div class="col-md-4 col-12 d-md-block d-none">
 							<div class="sort-by">
@@ -325,7 +325,7 @@
 													<span class="d-inline-block average-rating">(17)</span>
 												</div>
 												<div class="clinic-details">
-													<p class="doc-location"><i class="fas fa-map-marker-alt"></i> Hajipur, INDIA</p>
+													<p class="doc-location"><i class="fas fa-map-marker-alt"></i> Hajipur, BIHAR</p>
 													<ul class="clinic-gallery">
 														<li>
 															<a href="assets/img/features/feature-01.jpg" data-fancybox="gallery">
@@ -360,7 +360,7 @@
 												<ul>
 													<li><i class="far fa-thumbs-up"></i> 98%</li>
 													<li><i class="far fa-comment"></i> 17 Feedback</li>
-													<li><i class="fas fa-map-marker-alt"></i> Hajipur, INDIA</li>
+													<li><i class="fas fa-map-marker-alt"></i> Hajipur, BIHAR</li>
 													<li><i class="far fa-money-bill-alt"></i> ₹300 - ₹1000 <i class="fas fa-info-circle" data-toggle="tooltip" title="Lorem Ipsum"></i> </li>
 												</ul>
 											</div>
@@ -397,7 +397,7 @@
 													<span class="d-inline-block average-rating">(35)</span>
 												</div>
 												<div class="clinic-details">
-													<p class="doc-location"><i class="fas fa-map-marker-alt"></i>Hajipur, INDIA</p>
+													<p class="doc-location"><i class="fas fa-map-marker-alt"></i>Hajipur, BIHAR</p>
 													<ul class="clinic-gallery">
 														<li>
 															<a href="assets/img/features/feature-01.jpg" data-fancybox="gallery">
@@ -432,7 +432,7 @@
 												<ul>
 													<li><i class="far fa-thumbs-up"></i> 100%</li>
 													<li><i class="far fa-comment"></i> 35 Feedback</li>
-													<li><i class="fas fa-map-marker-alt"></i> Hajipur, INDIA</li>
+													<li><i class="fas fa-map-marker-alt"></i> Hajipur, BIHAR</li>
 													<li><i class="far fa-money-bill-alt"></i>₹50 - ₹300 <i class="fas fa-info-circle" data-toggle="tooltip" title="Lorem Ipsum"></i></li>
 												</ul>
 											</div>
@@ -469,7 +469,7 @@
 													<span class="d-inline-block average-rating">(27)</span>
 												</div>
 												<div class="clinic-details">
-													<p class="doc-location"><i class="fas fa-map-marker-alt"></i> Hajipur, INDIA</p>
+													<p class="doc-location"><i class="fas fa-map-marker-alt"></i> Hajipur, BIHAR</p>
 													<ul class="clinic-gallery">
 														<li>
 															<a href="assets/img/features/feature-01.jpg" data-fancybox="gallery">
@@ -504,7 +504,7 @@
 												<ul>
 													<li><i class="far fa-thumbs-up"></i> 99%</li>
 													<li><i class="far fa-comment"></i> 35 Feedback</li>
-													<li><i class="fas fa-map-marker-alt"></i> Hajipur, INDIA</li>
+													<li><i class="fas fa-map-marker-alt"></i> Hajipur, BIHAR</li>
 													<li><i class="far fa-money-bill-alt"></i> ₹100 - ₹400 <i class="fas fa-info-circle" data-toggle="tooltip" title="Lorem Ipsum"></i></li>
 												</ul>
 											</div>
@@ -576,7 +576,7 @@
 												<ul>
 													<li><i class="far fa-thumbs-up"></i> 97%</li>
 													<li><i class="far fa-comment"></i> 4 Feedback</li>
-													<li><i class="fas fa-map-marker-alt"></i> Hajipur, INDIAA</li>
+													<li><i class="fas fa-map-marker-alt"></i> Hajipur, BIHAR</li>
 													<li><i class="far fa-money-bill-alt"></i> ₹150 - ₹250 <i class="fas fa-info-circle" data-toggle="tooltip" title="Lorem Ipsum"></i></li>
 												</ul>
 											</div>
@@ -613,7 +613,7 @@
 													<span class="d-inline-block average-rating">(52)</span>
 												</div>
 												<div class="clinic-details">
-													<p class="doc-location"><i class="fas fa-map-marker-alt"></i> Texas, USA</p>
+													<p class="doc-location"><i class="fas fa-map-marker-alt"></i> Hajipur, BIHAR</p>
 													<ul class="clinic-gallery">
 														<li>
 															<a href="assets/img/features/feature-01.jpg" data-fancybox="gallery">
@@ -648,7 +648,7 @@
 												<ul>
 													<li><i class="far fa-thumbs-up"></i> 100%</li>
 													<li><i class="far fa-comment"></i> 52 Feedback</li>
-													<li><i class="fas fa-map-marker-alt"></i> Hajipur, INDIA</li>
+													<li><i class="fas fa-map-marker-alt"></i> Hajipur, BIHAR</li>
 													<li><i class="far fa-money-bill-alt"></i> ₹100 - ₹500 <i class="fas fa-info-circle" data-toggle="tooltip" title="Lorem Ipsum"></i></li>
 												</ul>
 											</div>
