--- a/booking.html
+++ b/booking.html
@@ -213,23 +213,23 @@
 											<img src="assets/img/doctors/doctor-thumb-02.jpg" alt="User Image">
 										</a>
 										<div class="booking-info">
-											<h4><a href="doctor-profile.html">Dr. Darren Elder</a></h4>
+											<h4><a href="doctor-profile.html">Dr. Ravi Prakash</a></h4>
 											<div class="rating">
 												<i class="fas fa-star filled"></i>
 												<i class="fas fa-star filled"></i>
 												<i class="fas fa-star filled"></i>
 												<i class="fas fa-star filled"></i>
 												<i class="fas fa-star"></i>
-												<span class="d-inline-block average-rating">35</span>
+												<span class="d-inline-block average-rating">45</span>
 											</div>
-											<p class="text-muted mb-0"><i class="fas fa-map-marker-alt"></i> Hajipur, INDIA</p>
+											<p class="text-muted mb-0"><i class="fas fa-map-marker-alt"></i> Hajipur, BIHAR</p>
 										</div>
 									</div>
 								</div>
 							</div>
 							<div class="row">
 								<div class="col-12 col-sm-4 col-md-6">
-									<h4 class="mb-1">11 November 2019</h4>
+									<h4 class="mb-1">25 August 2020</h4>
 									<p class="text-muted">Monday</p>
 								</div>
 								<div class="col-12 col-sm-8 col-md-6 text-sm-right">
@@ -258,31 +258,31 @@
 													</li>
 													<li>
 														<span>Mon</span>
-														<span class="slot-date">11 Nov <small class="slot-year">2019</small></span>
+														<span class="slot-date">11 Aug <small class="slot-year">2020</small></span>
 													</li>
 													<li>
 														<span>Tue</span>
-														<span class="slot-date">12 Nov <small class="slot-year">2019</small></span>
+														<span class="slot-date">12 Aug <small class="slot-year">2020</small></span>
 													</li>
 													<li>
 														<span>Wed</span>
-														<span class="slot-date">13 Nov <small class="slot-year">2019</small></span>
+														<span class="slot-date">13 Aug <small class="slot-year">2020</small></span>
 													</li>
 													<li>
 														<span>Thu</span>
-														<span class="slot-date">14 Nov <small class="slot-year">2019</small></span>
-													</li>
+														<span class="slot-date">14 Aug <small class="slot-year">2020</small></span>
+													</li> 
 													<li>
 														<span>Fri</span>
-														<span class="slot-date">15 Nov <small class="slot-year">2019</small></span>
+														<span class="slot-date">15 Aug <small class="slot-year">2020</small></span>
 													</li>
 													<li>
 														<span>Sat</span>
-														<span class="slot-date">16 Nov <small class="slot-year">2019</small></span>
+														<span class="slot-date">16 Aug <small class="slot-year">2020</small></span>
 													</li>
 													<li>
 														<span>Sun</span>
-														<span class="slot-date">17 Nov <small class="slot-year">2019</small></span>
+														<span class="slot-date">17 Aug <small class="slot-year">2020</small></span>
 													</li>
 													<li class="right-arrow">
 														<a href="">
