--- a/pharmacy-details.html
+++ b/pharmacy-details.html
@@ -288,7 +288,7 @@
 											<div class="widget about-widget">
 												<h4 class="widget-title">About Me</h4>
 												<!--<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>-->
-												<p>BEST CARDIOLOGIST in jauhari bazar,Hajipur at NEW SARVOTTAM MEDICO (HEART CARE CENTRE).I really know that, that here Dr. Neeraj Sinha comes ....,
+												<p>BEST CARDIOLOGIST in jauhari bazar,Hajipur at NEW SARVOTTAM MEDICO (HEART CARE CENTRE).I really know that, that here Dr. Neeraj Sinha comes,
 													and he is really a good doctor and also for Awadhesh jee that he is very good man. Dr. Niraj Sinha - Chemists in Hajipur - Justdial. Good decor by Niraj Sinha in Hajipur.</p>
 											</div>
 											<!-- /About Details -->
@@ -337,12 +337,12 @@
 														</li>
 													</ul>
 												</div>
-											</div>
+											</div>-->
 											<!-- /Awards Details -->
 
 										</div>
 									</div>
-								</div>-->
+								</div>
 								<!-- /Overview Content -->
 								
 								<!-- Locations Content -->
