--- a/pharmacy-details.html
+++ b/pharmacy-details.html
@@ -718,10 +718,10 @@
 												<div class="widget-content">
 													<div class="listing-hours">
 														<div class="listing-day current">
-															<div class="day">Today <span>5 Nov 2019</span></div>
+															<div class="day">Today <span></span></div>
 															<div class="time-items">
 																<span class="open-status"><span class="badge bg-success-light">Open Now</span></span>
-																<span class="time">07:00 AM - 09:00 PM</span>
+																<!--<span class="time">07:00 AM - 09:00 PM</span>-->
 															</div>
 														</div>
 														<div class="listing-day">
