--- a/product-all.html
+++ b/product-all.html
@@ -272,8 +272,8 @@
 
 							<div class="row align-items-center pb-3">	
 								<div class="col-md-4 col-12 d-md-block d-none custom-short-by">
-									<h3 class="title pharmacy-title">Medlife Medical</h3>
-									<p class="doc-location mb-2 text-ellipse pharmacy-location"><i class="fas fa-map-marker-alt mr-1"></i> 96 Red Hawk Road Cyrus, MN 56323 </p>
+									<h3 class="title pharmacy-title">New Sarvottam Medico(HEART CARE CENTRE)</h3>
+									<p class="doc-location mb-2 text-ellipse pharmacy-location"><i class="fas fa-map-marker-alt mr-1"></i> C/O - Awadhesh Jee, Jauhari Bazar, Hajipur,<br> Hajipur - 844101, Dr. Niraj Sinha </p>
 									<span class="sort-title">Showing 6 of 98 products</span>
 								</div>
 								<div class="col-md-8 col-12 d-md-block d-none custom-short-by">
