--- a/product-all.html
+++ b/product-all.html
@@ -272,7 +272,7 @@
 
 							<div class="row align-items-center pb-3">	
 								<div class="col-md-4 col-12 d-md-block d-none custom-short-by">
-									<h3 class="title pharmacy-title">New Sarvottam Medico(HEART CARE CENTRE)</h3>
+									<h3 class="title pharmacy-title">New Sarvottam Medico<br>(HEART CARE CENTRE)</h3>
 									<p class="doc-location mb-2 text-ellipse pharmacy-location"><i class="fas fa-map-marker-alt mr-1"></i> C/O - Awadhesh Jee, Jauhari Bazar, Hajipur,<br> Hajipur - 844101, Dr. Niraj Sinha </p>
 									<span class="sort-title">Showing 6 of 98 products</span>
 								</div>
