--- a/product-all.html
+++ b/product-all.html
@@ -305,7 +305,7 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Benzaxapine Croplex</a> 
+												<a href="product-description.html" tabindex="-1">Benzodiazepines</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
@@ -331,7 +331,7 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Rapalac Neuronium</a> 
+												<a href="product-description.html" tabindex="-1">Over-the-counter (OTC)</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
@@ -356,7 +356,7 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Ombinazol Bonibamol</a> 
+												<a href="product-description.html" tabindex="-1">Calytes Tablet</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
@@ -381,7 +381,7 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Dantotate Dantodazole</a> 
+												<a href="product-description.html" tabindex="-1">pilax</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
@@ -407,7 +407,7 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Acetrace Amionel</a> 
+												<a href="product-description.html" tabindex="-1">Anusol Cream</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
@@ -432,7 +432,7 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Ergorinex Caffeigestin</a> 
+												<a href="product-description.html" tabindex="-1">Panadol</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
@@ -457,7 +457,7 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Alispirox Aerorenone</a> 
+												<a href="product-description.html" tabindex="-1">Becosules Capsule</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
@@ -482,7 +482,7 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Lysofranil Dorzostin</a> 
+												<a href="product-description.html" tabindex="-1">Oxalgin-DP</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
@@ -508,7 +508,7 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Nitrolozin Zithrotropin</a> 
+												<a href="product-description.html" tabindex="-1">Norflox-TZ</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
@@ -533,7 +533,7 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Cordacriptine Mardipine</a> 
+												<a href="product-description.html" tabindex="-1">Metrogyl</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
@@ -558,7 +558,7 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Iconevist Ampyplex</a> 
+												<a href="product-description.html" tabindex="-1">Evion Capcule</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
@@ -583,7 +583,7 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Alcafsteride Omebide</a> 
+												<a href="product-description.html" tabindex="-1">Quadriderm RF Cream</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
@@ -608,7 +608,7 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Neubide Aborase</a> 
+												<a href="product-description.html" tabindex="-1">Cilniblu-T </a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
@@ -633,7 +633,7 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">ITONE eye drops 10ml</a> 
+												<a href="product-description.html" tabindex="-1">Levofloxacin Tablet</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
@@ -658,7 +658,7 @@
 										</div>
 										<div class="pro-content">
 											<h3 class="title pb-4">
-												<a href="product-description.html" tabindex="-1">Antatriene Drospiletra</a> 
+												<a href="product-description.html" tabindex="-1">Lomofen+</a> 
 											</h3>
 											<div class="row align-items-center">
 												<div class="col-lg-6">
