--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 								<!-- Slider Item -->
 								<div class="speicality-item text-center">
 									<div class="speicality-img">
-										<img src="assets/img/specialities/specialities-10.png" class="img-fluid" alt="Speciality">
+										<img src="assets/img/specialities/specialities-10.jpg" class="img-fluid" alt="Speciality">
 										<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 									</div>	
 									<p>Rhinoplasty</p>
@@ -429,7 +429,7 @@
 										</div>
 										<ul class="available-info">
 											<li>
-												<i class="fas fa-map-marker-alt"></i>Hajipur, INDIA
+												<i class="fas fa-map-marker-alt"></i>Hajipur, BIHAR
 											</li>
 											<li>
 												<i class="far fa-clock"></i> Available on Fri, 22 Mar
@@ -477,7 +477,7 @@
 										</div>
 										<ul class="available-info">
 											<li>
-												<i class="fas fa-map-marker-alt"></i> Hajipur, INDIA
+												<i class="fas fa-map-marker-alt"></i> Hajipur, BIHAR
 											</li>
 											<li>
 												<i class="far fa-clock"></i> Available on Fri, 22 Mar
@@ -525,7 +525,7 @@
 										</div>
 										<ul class="available-info">
 											<li>
-												<i class="fas fa-map-marker-alt"></i>Hajipur, INDIA
+												<i class="fas fa-map-marker-alt"></i>Hajipur, BIHAR
 											</li>
 											<li>
 												<i class="far fa-clock"></i> Available on Fri, 22 Mar
@@ -573,7 +573,7 @@
 										</div>
 										<ul class="available-info">
 											<li>
-												<i class="fas fa-map-marker-alt"></i> Hajipur, INDIA
+												<i class="fas fa-map-marker-alt"></i> Hajipur, BIHAR
 											</li>
 											<li>
 												<i class="far fa-clock"></i> Available on Fri, 22 Mar
@@ -621,7 +621,7 @@
 										</div>
 										<ul class="available-info">
 											<li>
-												<i class="fas fa-map-marker-alt"></i> Hajipur, INDIA
+												<i class="fas fa-map-marker-alt"></i> Hajipur, BIHAR
 											</li>
 											<li>
 												<i class="far fa-clock"></i> Available on Fri, 22 Mar
@@ -669,7 +669,7 @@
 										</div>
 										<ul class="available-info">
 											<li>
-												<i class="fas fa-map-marker-alt"></i> Hajipur, INDIA
+												<i class="fas fa-map-marker-alt"></i> Hajipur, BIHAR
 											</li>
 											<li>
 												<i class="far fa-clock"></i> Available on Fri, 22 Mar
@@ -717,7 +717,7 @@
 										</div>
 										<ul class="available-info">
 											<li>
-												<i class="fas fa-map-marker-alt"></i> Hajipur, INDIA
+												<i class="fas fa-map-marker-alt"></i> Hajipur, BIHAR
 											</li>
 											<li>
 												<i class="far fa-clock"></i> Available on Fri, 22 Mar
@@ -765,7 +765,7 @@
 										</div>
 										<ul class="available-info">
 											<li>
-												<i class="fas fa-map-marker-alt"></i> Hajipur, INDIA
+												<i class="fas fa-map-marker-alt"></i> Hajipur, BIHAR
 											</li>
 											<li>
 												<i class="far fa-clock"></i> Available on Fri, 22 Mar
