--- a/product-description.html
+++ b/product-description.html
@@ -213,16 +213,18 @@
 													<img src="assets/img/products/product.jpg" class="img-fluid" alt="User Image">
 											</div>
 											<div class="doc-info-cont">
-												<h4 class="doc-name mb-2">Benzaxapine Croplex</h4>
-												<p><span class="text-muted">Manufactured By </span> Hamdard (Wakf) Laboratories</p>
-												<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p>
+												<h4 class="doc-name mb-2">Benzodiazepines</h4>
+												<!--<p><span class="text-muted">Manufactured By </span> Hamdard (Wakf) Laboratories</p>-->
+												<!--<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled</p>-->
+												<p>Benzodiazepines are widely used in medicine to treat anxiety and insomnia. These are synthetic substances normally seen as pharmaceutically-manufactured tablets, capsules and occasionally as injectables.
+													They act as depressants of the central nervous system (CNS). Benzodiazepines are a class of drugs prescribed in the US. It particularly relieves the accompanying anxiety and sleep disturbance.</p>
 												<div class="feature-product pt-4">
 													<span>Applied for:</span>
 													<ul>
-														<li>Moisturization & Nourishment</li>
-														<li>Blackhead Removal</li>
-														<li>Anti-acne & Pimples</li>
-														<li>Whitening & Fairness</li>
+														<li>Generalized anxiety disorder</li>
+														<li>Insomnia</li>
+													        <li>Alcohol withdrawal</li>
+														<li>Panic disorder</li>
 													</ul>
 												</div>
 											</div>
