--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
 								<div class="profile-widget">
 									<div class="doc-img">
 										<a href="doctor-profile.html">
-											<img class="img-fluid" alt="User Image" src="assets/img/doctors/doctor-01.jpg" width="200" height="200">
+											<img class="img-fluid pic" alt="User Image" src="assets/img/doctors/doctor-01.jpg" width="200" height="200">
 										</a>
 										<a href="javascript:void(0)" class="fav-btn">
 											<i class="far fa-bookmark"></i>
@@ -455,7 +455,7 @@
 								<div class="profile-widget">
 									<div class="doc-img">
 										<a href="doctor-profile.html">
-											<img class="img-fluid" alt="User Image" src="assets/img/doctors/doctor-02.jpg" width="200" height="200">
+											<img class="img-fluid pic" alt="User Image" src="assets/img/doctors/doctor-02.jpg" width="200" height="200">
 										</a>
 										<a href="javascript:void(0)" class="fav-btn">
 											<i class="far fa-bookmark"></i>
@@ -503,7 +503,7 @@
 								<div class="profile-widget">
 									<div class="doc-img">
 										<a href="doctor-profile.html">
-											<img class="img-fluid" alt="User Image" src="assets/img/doctors/doctor-03.jpg" width="200" height="200">
+											<img class="img-fluid pic" alt="User Image" src="assets/img/doctors/doctor-03.jpg" width="200" height="200">
 										</a>
 										<a href="javascript:void(0)" class="fav-btn">
 											<i class="far fa-bookmark"></i>
@@ -551,7 +551,7 @@
 								<div class="profile-widget">
 									<div class="doc-img">
 										<a href="doctor-profile.html">
-											<img class="img-fluid" alt="User Image" src="assets/img/doctors/doctor-04.jpg" width="200" height="200">
+											<img class="img-fluid pic" alt="User Image" src="assets/img/doctors/doctor-04.jpg" width="200" height="200">
 										</a>
 										<a href="javascript:void(0)" class="fav-btn">
 											<i class="far fa-bookmark"></i>
@@ -599,7 +599,7 @@
 								<div class="profile-widget">
 									<div class="doc-img">
 										<a href="doctor-profile.html">
-											<img class="img-fluid" alt="User Image" src="assets/img/doctors/doctor-05.jpg" width="200" height="200">
+											<img class="img-fluid pic" alt="User Image" src="assets/img/doctors/doctor-05.jpg" width="200" height="200">
 										</a>
 										<a href="javascript:void(0)" class="fav-btn">
 											<i class="far fa-bookmark"></i>
@@ -647,7 +647,7 @@
 								<div class="profile-widget">
 									<div class="doc-img">
 										<a href="doctor-profile.html">
-											<img class="img-fluid" alt="User Image" src="assets/img/doctors/doctor-06.jpg" width="200" height="200">
+											<img class="img-fluid pic" alt="User Image" src="assets/img/doctors/doctor-06.jpg" width="200" height="200">
 										</a>
 										<a href="javascript:void(0)" class="fav-btn">
 											<i class="far fa-bookmark"></i>
@@ -695,7 +695,7 @@
 								<div class="profile-widget">
 									<div class="doc-img">
 										<a href="doctor-profile.html">
-											<img class="img-fluid" alt="User Image" src="assets/img/doctors/doctor-07.jpg" width="200" height="200">
+											<img class="img-fluid pic" alt="User Image" src="assets/img/doctors/doctor-07.jpg" width="200" height="200">
 										</a>
 										<a href="javascript:void(0)" class="fav-btn">
 											<i class="far fa-bookmark"></i>
@@ -743,7 +743,7 @@
 								<div class="profile-widget">
 									<div class="doc-img">
 										<a href="doctor-profile.html">
-											<img class="img-fluid" alt="User Image" src="assets/img/doctors/doctor-08.jpg" width="200" height="200">
+											<img class="img-fluid pic" alt="User Image" src="assets/img/doctors/doctor-08.jpg" width="200" height="200">
 										</a>
 										<a href="javascript:void(0)" class="fav-btn">
 											<i class="far fa-bookmark"></i>
