--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
 								<div class="profile-widget">
 									<div class="doc-img">
 										<a href="doctor-profile.html">
-											<img class="img-fluid pic" alt="User Image" src="assets/img/doctors/doctor-05.jpg" width="200" height="200">
+											<img class="img-fluid pic" alt="User Image" src="assets/img/doctors/doctor-05.jpeg" width="200" height="200">
 										</a>
 										<a href="javascript:void(0)" class="fav-btn">
 											<i class="far fa-bookmark"></i>
@@ -647,7 +647,7 @@
 								<div class="profile-widget">
 									<div class="doc-img">
 										<a href="doctor-profile.html">
-											<img class="img-fluid pic" alt="User Image" src="assets/img/doctors/doctor-06.jpg" width="200" height="200">
+											<img class="img-fluid pic" alt="User Image" src="assets/img/doctors/doctor-06.webp" width="200" height="200">
 										</a>
 										<a href="javascript:void(0)" class="fav-btn">
 											<i class="far fa-bookmark"></i>
