--- a/index.html
+++ b/index.html
@@ -872,7 +872,7 @@
 							<!-- Blog Post -->
 							<div class="blog grid-blog">
 								<div class="blog-image">
-									<a href="blog-details.html"><img class="img-fluid pic1" src="assets/img/blog/blog-01.jpg" alt="Post Image"></a>
+									<a href="blog-details.html"><img class="img-fluid pic1" src="assets/img/blog/blog-01.jpg" alt="Post Image" width:"250" height:"186"></a>
 								</div>
 								<div class="blog-content">
 									<ul class="entry-meta meta-item">
@@ -895,7 +895,7 @@
 							<!-- Blog Post -->
 							<div class="blog grid-blog">
 								<div class="blog-image">
-									<a href="blog-details.html"><img class="img-fluid pic1" src="assets/img/blog/blog-02.jpg" alt="Post Image"></a>
+									<a href="blog-details.html"><img class="img-fluid pic1" src="assets/img/blog/blog-02.jpg" alt="Post Image"  width:"250" height:"186"></a>
 								</div>
 								<div class="blog-content">
 									<ul class="entry-meta meta-item">
@@ -918,7 +918,7 @@
 							<!-- Blog Post -->
 							<div class="blog grid-blog">
 								<div class="blog-image">
-									<a href="blog-details.html"><img class="img-fluid pic1" src="assets/img/blog/blog-03.jpg" alt="Post Image"></a>
+									<a href="blog-details.html"><img class="img-fluid pic1" src="assets/img/blog/blog-03.jpg" alt="Post Image"  width:"250" height:"186"></a>
 								</div>
 								<div class="blog-content">
 									<ul class="entry-meta meta-item">
@@ -941,7 +941,7 @@
 							<!-- Blog Post -->
 							<div class="blog grid-blog">
 								<div class="blog-image">
-									<a href="blog-details.html"><img class="img-fluid" src="assets/img/blog/blog-04.jpg" alt="Post Image"></a>
+									<a href="blog-details.html"><img class="img-fluid pic1" src="assets/img/blog/blog-04.jpg" alt="Post Image"  width:"250" height:"186"></a>
 								</div>
 								<div class="blog-content">
 									<ul class="entry-meta meta-item">
