--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 							<div class="row">
 								<div class="col-lg-4 mb-3">
 									<div class="card text-center doctor-book-card">
-										<img src="assets/img/doctors/doctor-07.jpg" alt="" class="img-fluid " width:"250" height:"250" >
+										<img src="assets/img/doctors/doctor-07.jpg" alt="" class="img-fluid look"  >
 										<div class="doctor-book-card-content tile-card-content-1">
 											<div>
 												<h3 class="card-title mb-0">Visit a Doctor</h3>
