--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
 							<div class="row">
 								<div class="col-lg-4 mb-3">
 									<div class="card text-center doctor-book-card">
-										<img src="assets/img/doctors/doctor-07.jpg" alt="" class="img-fluid look"  >
-										<div class="doctor-book-card-content tile-card-content-1">
+										<img src="assets/img/doctors/doctor-07.jpg" alt="" class="img-fluid">
+                                                                                    <div class="doctor-book-card-content tile-card-content-1">
 											<div>
 												<h3 class="card-title mb-0">Visit a Doctor</h3>
 												<a href="search.html" class="btn book-btn1 px-3 py-2 mt-3" tabindex="0">Book Now</a>
