--- a/diagnostics-index.html
+++ b/diagnostics-index.html
@@ -387,11 +387,11 @@
 								<p>Book doctor appointment in just a heartbeat</p>
 							</div>
 							<div class="about-content">
-								<!--<p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum.</p>-->
-								<!--<p>web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes</p></p>-->
-								<p>Doctors! Make it easier for patients to reach you. Doctor Khojo helps you to find the best doctors near to your location, book appointment with best doctors, clinics, hospitals & diagnostic centers in India.</p>
-								<p>If you do a class like yoga or pilates, simply let your instructor know so they can adapt.These are experts on hormones and metabolism. They can treat conditions like diabetes, thyroid problems,
-									infertility, and calcium and bone disorders. </p>
+								<p><b>Doctor Khojo</b> is the largest chain of Health Check Centers which give the advantage to choose
+								    your nearest Diagnostic Center or hospital and at your convenience. We provide an advanced range of health 
+								    assessments, which combine state of the art technology with specialist expertise.</p>
+                                                              <p>The health assessments give you an in-depth insight into your current state of health and give you 
+								     the means and motivation to make sustainable changes to your lifestyle. </p>
 								<a href="javascript:;">Read More..</a>
 							</div>
 						</div>
