--- a/diagnostics-index.html
+++ b/diagnostics-index.html
@@ -382,9 +382,9 @@
 				   <div class="row">
 						<div class="col-lg-4">
 							<div class="section-header ">
-								<h2>Book Our Doctor</h2>
+								<h2>Why Choose Doctor Khojo Diagnostic</h2>
 								<!--<p>Lorem Ipsum is simply dummy text </p>-->
-								<p>Book doctor appointment in just a heartbeat</p>
+								<!--<p>Book appointment for Diagnostics</p>-->
 							</div>
 							<div class="about-content">
 								<p><b>Doctor Khojo</b> is the largest chain of Health Check Centers which give the advantage to choose
