--- a/diagnostics-index.html
+++ b/diagnostics-index.html
@@ -308,7 +308,7 @@
 			<section class="section section-specialities">
 				<div class="container-fluid">
 					<div class="section-header text-center">
-						<h2>Clinic and Specialities</h2>
+						<h2>Health Checkups and Screenings For</h2>
 						<!--<p class="sub-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>-->
 						<p>Visit our Speciality Services</p>
 					</div>
