--- a/pharmacy-search.html
+++ b/pharmacy-search.html
@@ -294,7 +294,7 @@
 										<div class="doc-info-left">
 											<div class="doctor-img1">
 												<a href="pharmacy-details.html">
-													<img src="assets/img/medical-img1.jpg" class="img-fluid" alt="User Image">
+													<img src="assets/img/img1.jpg" class="img-fluid" alt="User Image">
 												</a>
 											</div>
 											<div class="doc-info-cont">
