--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
 										</li>
 										<li><i class="far fa-clock"></i> 15 Mar 2020</li>
 									</ul>
-									<h3 class="blog-title"><a href="blog-details.html">Doccure – Making your clinic painless visit?</a></h3>
+									<h3 class="blog-title"><a href="blog-details.html">Doctor Khojo – Making your clinic painless visit?</a></h3>
 									<!--<p class="mb-0">Lorem ipsum dolor sit amet, consectetur em adipiscing elit, sed do eiusmod tempor.</p>-->
 								</div>
 							</div>
