--- a/pharmacy-search.html
+++ b/pharmacy-search.html
@@ -385,7 +385,7 @@ New Sarvottam Medico(HEART CARE CENTRE)</a></h4>
 										<div class="doc-info-left">
 											<div class="doctor-img1">
 												<a href="pharmacy-details.html">
-													<img style="height: 250px; width: 300px;" src="assets/img/img3.html" class="img-fluid" alt="User Image">
+													<img style="height: 250px; width: 300px;" src="assets/img/img3.jfif" class="img-fluid" alt="User Image">
 												</a>
 											</div>
 											<div class="doc-info-cont">
