--- a/doctors.html
+++ b/doctors.html
@@ -308,13 +308,13 @@
 										<div class="doc-info-left">
 											<div class="doctor-img">
 												<a href="doctor-profile.html">
-													<img src="assets/img/doctors/doctor-thumb-01.jpg" class="img-fluid" alt="User Image">
+													<img src="assets/img/doctors/doctor-thumb-02.jpg" class="img-fluid" alt="User Image">
 												</a>
 											</div>
 											<div class="doc-info-cont">
 												<h4 class="doc-name"><a href="doctor-profile.html">Dr. Ravi Prakash</a></h4>
-												<p class="doc-speciality">Anaesthetic</p>
-												<h5 class="doc-department"><img src="assets/img/specialities/specialities-05.png" class="img-fluid" alt="Speciality">Dentist</h5>
+												<!--<p class="doc-speciality">Anaesthetic</p>-->
+												<h5 class="doc-department"><!--<img src="assets/img/specialities/specialities-05.png" class="img-fluid" alt="Speciality">-->Anaesthetic</h5>
 												<div class="rating">
 													<i class="fas fa-star filled"></i>
 													<i class="fas fa-star filled"></i>
@@ -380,12 +380,12 @@
 										<div class="doc-info-left">
 											<div class="doctor-img">
 												<a href="doctor-profile.html">
-													<img src="assets/img/doctors/doctor-thumb-02.jpg" class="img-fluid" alt="User Image">
+													<img src="assets/img/doctors/doctor-thumb-03.jpg" class="img-fluid" alt="User Image">
 												</a>
 											</div>
 											<div class="doc-info-cont">
 												<h4 class="doc-name"><a href="doctor-profile.html">Dr.Dya Shankar</a></h4>
-												<p class="doc-speciality">Dentist</p>
+												<!--<p class="doc-speciality">Dentist</p>-->
 												<h5 class="doc-department"><img src="assets/img/specialities/specialities-05.png" class="img-fluid" alt="Speciality">Dentist</h5>
 												<div class="rating">
 													<i class="fas fa-star filled"></i>
@@ -457,8 +457,8 @@
 											</div>
 											<div class="doc-info-cont">
 												<h4 class="doc-name"><a href="doctor-profile.html">Dr. O.P Chauhan</a></h4>
-												<p class="doc-speciality">Skin</p>
-												<p class="doc-department"><img src="assets/img/specialities/specialities-04.png" class="img-fluid" alt="Speciality">Cardiology</p>
+												<!--<p class="doc-speciality">Skin</p>-->
+												<p class="doc-department"><!--<img src="assets/img/specialities/specialities-04.png" class="img-fluid" alt="Speciality">-->Skin </p>
 												<div class="rating">
 													<i class="fas fa-star filled"></i>
 													<i class="fas fa-star filled"></i>
@@ -524,13 +524,13 @@
 										<div class="doc-info-left">
 											<div class="doctor-img">
 												<a href="doctor-profile.html">
-													<img src="assets/img/doctors/doctor-thumb-04.jpg" class="img-fluid" alt="User Image">
+													<img src="assets/img/doctors/doctor-thumb-06.jpg" class="img-fluid" alt="User Image">
 												</a>
 											</div>
 											<div class="doc-info-cont">
 												<h4 class="doc-name"><a href="doctor-profile.html">Dr. G.M Sinha</a></h4>
-												<p class="doc-speciality">Eye</p>
-												<p class="doc-department"><img src="assets/img/specialities/specialities-01.png" class="img-fluid" alt="Speciality">Urology</p>
+												<!--<p class="doc-speciality">Eye</p>-->
+												<p class="doc-department"><!--<img src="assets/img/specialities/specialities-01.png" class="img-fluid" alt="Speciality">-->Eye</p>
 												<div class="rating">
 													<i class="fas fa-star filled"></i>
 													<i class="fas fa-star filled"></i>
@@ -596,13 +596,13 @@
 										<div class="doc-info-left">
 											<div class="doctor-img">
 												<a href="doctor-profile.html">
-													<img src="assets/img/doctors/doctor-thumb-06.jpg" class="img-fluid" alt="User Image">
+													<img src="assets/img/doctors/doctor-thumb-07.jpg" class="img-fluid" alt="User Image">
 												</a>
 											</div>
 											<div class="doc-info-cont">
 												<h4 class="doc-name"><a href="doctor-profile.html">Dr. Ashma Parvin</a></h4>
-												<p class="doc-speciality">Gayeni</p>
-												<p class="doc-department"><img src="assets/img/specialities/specialities-03.png" class="img-fluid" alt="Speciality">Orthopaedics</p>
+												<!--<p class="doc-speciality">Gayeni</p>-->
+												<p class="doc-department"><!--<img src="assets/img/specialities/specialities-03.png" class="img-fluid" alt="Speciality">-->Gayeni</p>
 												<div class="rating">
 													<i class="fas fa-star filled"></i>
 													<i class="fas fa-star filled"></i>
