--- a/doctors.html
+++ b/doctors.html
@@ -308,7 +308,7 @@
 										<div class="doc-info-left">
 											<div class="doctor-img">
 												<a href="doctor-profile.html">
-													<img src="assets/img/doctors/doctor-thumb-02.jpg" class="img-fluid" alt="User Image">
+													<img src="assets/img/doctors/doctor-thumb-02.jpg" class="img-fluid doc" alt="User Image">
 												</a>
 											</div>
 											<div class="doc-info-cont">
@@ -380,11 +380,11 @@
 										<div class="doc-info-left">
 											<div class="doctor-img">
 												<a href="doctor-profile.html">
-													<img src="assets/img/doctors/doctor-thumb-03.jpg" class="img-fluid" alt="User Image">
+													<img src="assets/img/doctors/doctor-thumb-03.jpg" class="img-fluid doc" alt="User Image">
 												</a>
 											</div>
 											<div class="doc-info-cont">
-												<h4 class="doc-name"><a href="doctor-profile.html">Dr.Dya Shankar</a></h4>
+												<h4 class="doc-name"><a href="doctor-profile.html">Dr.Daya Shankar</a></h4>
 												<!--<p class="doc-speciality">Dentist</p>-->
 												<h5 class="doc-department"><img src="assets/img/specialities/specialities-05.png" class="img-fluid" alt="Speciality">Dentist</h5>
 												<div class="rating">
@@ -452,7 +452,7 @@
 										<div class="doc-info-left">
 											<div class="doctor-img">
 												<a href="doctor-profile.html">
-													<img src="assets/img/doctors/doctor-thumb-03.jpg" class="img-fluid" alt="User Image">
+													<img src="assets/img/doctors/doctor-thumb-03.jpg" class="img-fluid doc" alt="User Image">
 												</a>
 											</div>
 											<div class="doc-info-cont">
@@ -524,7 +524,7 @@
 										<div class="doc-info-left">
 											<div class="doctor-img">
 												<a href="doctor-profile.html">
-													<img src="assets/img/doctors/doctor-thumb-07.jpg" class="img-fluid" alt="User Image">
+													<img src="assets/img/doctors/doctor-thumb-07.jpg" class="img-fluid doc" alt="User Image">
 												</a>
 											</div>
 											<div class="doc-info-cont">
@@ -596,7 +596,7 @@
 										<div class="doc-info-left">
 											<div class="doctor-img">
 												<a href="doctor-profile.html">
-													<img src="assets/img/doctors/doctor-thumb-06.jpg" class="img-fluid" alt="User Image">
+													<img src="assets/img/doctors/doctor-thumb-04.jpg" class="img-fluid doc" alt="User Image">
 												</a>
 											</div>
 											<div class="doc-info-cont">
