--- a/doctors.html
+++ b/doctors.html
@@ -452,7 +452,7 @@
 										<div class="doc-info-left">
 											<div class="doctor-img">
 												<a href="doctor-profile.html">
-													<img src="assets/img/doctors/doctor-thumb-05.jpg" class="img-fluid doc" alt="User Image">
+													<img src="assets/img/doctors/doctor-thumb-05.jpeg" class="img-fluid doc" alt="User Image">
 												</a>
 											</div>
 											<div class="doc-info-cont">
@@ -524,7 +524,7 @@
 										<div class="doc-info-left">
 											<div class="doctor-img">
 												<a href="doctor-profile.html">
-													<img src="assets/img/doctors/doctor-thumb-07.jpg" class="img-fluid doc" alt="User Image">
+													<img src="assets/img/doctors/doctor-thumb-06.jpg" class="img-fluid doc" alt="User Image">
 												</a>
 											</div>
 											<div class="doc-info-cont">
