--- a/product-all.html
+++ b/product-all.html
@@ -297,7 +297,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product.jpg">
+												<img style="height: 350px; width: 300px"  class="img-fluid" alt="Product image" src="assets/img/products/product.jpg">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -323,7 +323,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product13.jpg">
+												<img style="height: 350px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product1.jfif">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -348,7 +348,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product1.jpg">
+												<img  style="height: 350px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product2.jfif">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -373,7 +373,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product2.jpg">
+												<img style="height: 350px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product2.jpg">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
