--- a/index.html
+++ b/index.html
@@ -874,7 +874,7 @@
 							<!-- Blog Post -->
 							<div class="blog grid-blog">
 								<div class="blog-image">
-									<a href="blog-details.html"><img class="img-fluid pic1" src="assets/img/blog/blog-01.jfif" alt="Post Image" width:"250" height:"186"></a>
+									<a href="blog-details.html"><img class="img-fluid pic1" src="assets/img/blog/blog-01.jpeg" alt="Post Image" width:"250" height:"186"></a>
 								</div>
 								<div class="blog-content">
 									<ul class="entry-meta meta-item">
