--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 										<img src="assets/img/specialities/specialities-09.png" class="img-fluid" alt="Speciality">
 										<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 									</div>	
-									<p>Psychiatrist</p>
+									<p>Acupressure Therapy</p>
 								</div>							
 								<!-- /Slider Item -->
 									
@@ -369,7 +369,7 @@
 										<img src="assets/img/specialities/specialities-10.png" class="img-fluid" alt="Speciality">
 										<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 									</div>	
-									<p>Oncologist</p>
+									<p>Rhinology</p>
 								</div>							
 								<!-- /Slider Item -->
 								
