--- a/product-all.html
+++ b/product-all.html
@@ -373,7 +373,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img style="height: 350px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product2.jpg">
+												<img style="height: 350px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product3.jfif">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -399,7 +399,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product12.jpg">
+												<img style="height: 330px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product4.jfif">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -424,7 +424,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product11.jpg">
+												<img style="height: 330px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product5.jfif">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -449,7 +449,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product3.jpg">
+												<img style="height: 330px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product6.jfif">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -474,7 +474,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product10.jpg">
+												<img style="height: 330px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product7.jfif">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -500,7 +500,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product4.jpg">
+												<img style="height: 330px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product8.jfif">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -525,7 +525,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product14.jpg">
+												<img style="height: 330px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product9.jfif">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -550,7 +550,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product5.jpg">
+												<imgstyle="height: 330px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product10.jfif">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -575,7 +575,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product6.jpg">
+												<img style="height: 330px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product11.jfif">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -600,7 +600,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product15.jpg">
+												<img style="height: 330px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product12.jfif">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -625,7 +625,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product7.jpg">
+												<img style="height: 330px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product13.jfif">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
@@ -650,7 +650,7 @@
 	                                <div class="profile-widget">
 										<div class="doc-img">
 											<a href="product-description.html" tabindex="-1">
-												<img class="img-fluid" alt="Product image" src="assets/img/products/product8.jpg">
+												<img style="height: 330px; width: 300px" class="img-fluid" alt="Product image" src="assets/img/products/product14.jfif">
 											</a>
 											<a href="javascript:void(0)" class="fav-btn" tabindex="-1">
 												<i class="far fa-bookmark"></i>
