--- a/lab-search.html
+++ b/lab-search.html
@@ -199,7 +199,7 @@
 									<li class="breadcrumb-item active" aria-current="page">Search</li>
 								</ol>
 							</nav>
-							<h2 class="breadcrumb-title">2245 matches found for : Pharmacy In United States</h2>
+							<h2 class="breadcrumb-title">1025 matches found for : Diagnostics In Bihar</h2>
 						</div>
 						<div class="col-md-4 col-12 d-md-block d-none">
 							<div class="sort-by">
@@ -295,7 +295,7 @@
 										<div class="doc-info-left">
 											<div class="doctor-img1">
 												<a href="pharmacy-details.html">
-													<img src="assets/img/medical-img1.jpg" class="img-fluid" alt="User Image">
+													<img style="height: 300px; width: 350px;"  src="assets/img/lab1.jfif" class="img-fluid" alt="User Image">
 												</a>
 											</div>
 											<div class="doc-info-cont">
@@ -340,7 +340,7 @@
 										<div class="doc-info-left">
 											<div class="doctor-img1">
 												<a href="pharmacy-details.html">
-													<img src="assets/img/medical-img2.jpg" class="img-fluid" alt="User Image">
+													<img style="height: 300px; width: 350px;"  src="assets/img/lab2.jfif" class="img-fluid" alt="User Image">
 												</a>
 											</div>
 											<div class="doc-info-cont">
@@ -385,7 +385,7 @@
 										<div class="doc-info-left">
 											<div class="doctor-img1">
 												<a href="pharmacy-details.html">
-													<img src="assets/img/medical-img3.jpg" class="img-fluid" alt="User Image">
+													<img style="height: 300px; width: 350px;"  src="assets/img/lab3.jfif" class="img-fluid" alt="User Image">
 												</a>
 											</div>
 											<div class="doc-info-cont">
