--- a/doctors.html
+++ b/doctors.html
@@ -286,7 +286,31 @@
 									<div>
 										<label class="custom_check">
 											<input type="checkbox" name="select_specialist">
-											<span class="checkmark"></span> Cardiologist
+											<span class="checkmark"></span>Otolaryngology
+										</label>
+									</div>
+									<div>
+										<label class="custom_check">
+											<input type="checkbox" name="select_specialist">
+											<span class="checkmark"></span>Gastroenterologist
+										</label>
+									</div>
+									<div>
+										<label class="custom_check">
+											<input type="checkbox" name="select_specialist">
+											<span class="checkmark"></span>Gynecologist
+										</label>
+									</div>
+									<div>
+										<label class="custom_check">
+											<input type="checkbox" name="select_specialist">
+											<span class="checkmark"></span>Acupressure Therapy
+										</label>
+									</div>
+									<div>
+										<label class="custom_check">
+											<input type="checkbox" name="select_specialist">
+											<span class="checkmark"></span>Rhinology
 										</label>
 									</div>
 								</div>
